# stm32_workspace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt
apps/stm32f1xx_apps/: CMakeLists.txt
apps/stm32f1xx_apps/can_basic/: CMakeLists.txt  app.c  app.h
apps/stm32f4xx_apps/: CMakeLists.txt
apps/stm32f4xx_apps/led_blink/: app.c  app.h
apps/stm32f4xx_apps/sd_card/: CMakeLists.txt  app.c  app.h
apps/stm32f4xx_apps/sd_card_basic/: app.c  app.h
apps/stm32g4xx_apps/: CMakeLists.txt
apps/stm32g4xx_apps/can_basic/: CMakeLists.txt  app.c
apps/stm32g4xx_apps/led_blink/: app.c
drivers/boards/F103VET6/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F103VETX_FLASH.ld  stm32f103vet6_cfg.ioc
drivers/boards/F103VET6/Core/Src/: gpio.c  main.c
drivers/boards/F411CEU6/: .cproject  .mxproject  .project  CMakeLists.txt  stm32f411ceu6_cfg.ioc
drivers/boards/F411CEU6/Core/Inc/: stm32f4xx_it.h
drivers/boards/F411CEU6/Core/Src/: dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c
drivers/boards/G474RET6/: .cproject  .mxproject  .project  CMakeLists.txt  stm32g474ret6_cfg.ioc
drivers/boards/G474RET6/Core/Inc/: stm32g4xx_hal_conf.h
drivers/boards/G474RET6/Core/Src/: fdcan.c  gpio.c  main.c
services/fatfs/: CMakeLists.txt
services/fatfs/src/: diskio.c  fatfs_sd.c  fatfs_sd.h  ffconf.h
toolchains/: toolchains.cmake
toolchains/cmake/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
toolchains/cmake/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_instrumentation.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_pkg_config.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  (+90 more)
toolchains/cmake/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
toolchains/cmake/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CLICOLOR.html  CLICOLOR_FORCE.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_DIR.html  CMAKE_CONFIG_TYPE.html  CMAKE_CROSSCOMPILING_EMULATOR.html  CMAKE_EXPORT_BUILD_DATABASE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FRAMEWORK_PATH.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INCLUDE_PATH.html  CMAKE_INSTALL_MODE.html  CMAKE_INSTALL_PARALLEL_LEVEL.html  CMAKE_INSTALL_PREFIX.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_LIBRARY_PATH.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_POLICY_VERSION_MINIMUM.html  CMAKE_PREFIX_PATH.html  CMAKE_PROGRAM_PATH.html  CMAKE_TEST_LAUNCHER.html  (+40 more)
toolchains/cmake/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  MinGW Makefiles.html  NMake Makefiles JOM.html  NMake Makefiles.html  Ninja Multi-Config.html  Ninja.html  Sublime Text 2.html  Unix Makefiles.html  Visual Studio 10 2010.html  Visual Studio 11 2012.html  Visual Studio 12 2013.html  Visual Studio 14 2015.html  Visual Studio 15 2017.html  Visual Studio 16 2019.html  Visual Studio 17 2022.html  Visual Studio 6.html  Visual Studio 7 .NET 2003.html  Visual Studio 7.html  Visual Studio 8 2005.html  Visual Studio 9 2008.html  Watcom WMake.html  Xcode.html
toolchains/cmake/doc/cmake/html/manual/: ccmake.1.html  cmake-buildsystem.7.html  cmake-commands.7.html  cmake-compile-features.7.html  cmake-configure-log.7.html  cmake-cxxmodules.7.html  cmake-developer.7.html  cmake-env-variables.7.html  cmake-file-api.7.html  cmake-generator-expressions.7.html  cmake-generators.7.html  cmake-gui.1.html  cmake-instrumentation.7.html  cmake-language.7.html  cmake-modules.7.html  cmake-packages.7.html  cmake-policies.7.html  (+10 more)
toolchains/cmake/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
toolchains/cmake/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-instrumentation.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/autoconf-2.72/: AUTHORS  NEWS  README  THANKS
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/hidapi-hidapi-0.15.0/: AUTHORS.txt  README.md
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/libiconv-1.18/: NEWS  README
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/libusb-1.0.29/: AUTHORS  README
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/openocd-0.12.0/: AUTHORS  README  README.Windows  license-rules.txt
toolchains/xpack-openocd-0.12.0-7/distro-info/licenses/texinfo-7.2/: AUTHORS  NEWS  README  README-hacking
(+1859 files in other folders)
